--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
           <div class="col-two-image">
             <img
               class="image"
-              src="./images/image-header-desktop.jpg"
-              alt="image"
+              src="./images/image-header-desktop.jpg" alt="image desktop"
             />
           </div>
         </section>
